annotation-server/deployment/app/db.yml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: annotation-server-db
spec:
    # must be one, multiple instances will not share state
    replicas: 1
    selector:
        matchLabels:
            app: annotation-server-db
    template:
        metadata:
            labels:
                app: annotation-server-db
            name: annotation-server-db
        spec:
            containers:
                - name: annotation-server-db
                  image: postgres:13
                  volumeMounts:
                      - name: annotation-server-db-data
                        mountPath: /var/lib/postgresql/data
                  resources:
                      requests:
                          memory: '64Mi'
                          cpu: '10m'
                      limits:
                          memory: '256Mi'
                          cpu: '1'

            volumes:
                - name: annotation-server-db-data
                  persistentVolumeClaim:
                      claimName: annotation-server-db-volume-claim

---
apiVersion: v1
kind: Service
metadata:
    labels:
        app: annotation-server-db
    name: annotation-server-db-service
spec:
    ports:
        - port: 5432
          protocol: TCP
          targetPort: 5432
    selector:
        app: annotation-server-db
